--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ h1 {
     <h1 style="font-size: 30px;"> Orewa Lodge Accomodation </h1>
     <table style="width:100%">
         <tr>
-            <th><a href="../CSS/trying.html">Home</a></th>
-            <th><a href="../CSS/final.html">Storyboard</a></th>
-            <th><a href="../CSS/part3.html">Booking</a></th>
-            <th><a href="../CSS/main.html">About</a></th>
+            <th><a href="https://jteza.github.io/CSS/trying.html">Home</a></th>
+            <th><a href="https://jteza.github.io/CSS/final.html">Storyboard</a></th>
+            <th><a href="https://jteza.github.io/CSS/part3.html">Booking</a></th>
+            <th><a href="https://jteza.github.io/CSS/main.html">About</a></th>
         </tr>
     </table>
     <div class="mask2">
-<img src="../CSS/Images/i1.jpg" alt="Cinque Terre" width="1000" height="1000">
+<img src="https://jteza.github.io/CSS/Images/i1.jpg" alt="Cinque Terre" width="1000" height="1000">
 </div>
 
 </body>
