--- a/trial.html
+++ b/trial.html
@@ -14,8 +14,10 @@
         <span id="spin"></span>
       </div>
             <!-- <div id="image" img src="../CSS/Images/m2.jpg" alt="i1" width="100vw" height="420"> -->
-                <div id="astropup"><img src="../CSS/Images/ball1.png" alt="astropup" width="75" height="75"/> </div>
+                <div id="ball"><img src="../CSS/Images/ball1.png" alt="ball" width="75" height="75"/> </div>
                 <!-- <div id="spin"></div> -->
+            </div>
+            <div id="surfboard"><img src="Images/surfboard1.png" alt="board" width="120" height="120"/> 
             </div>
         </a>
         </body>
