--- a/Storage.html
+++ b/Storage.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <div id="firstPage" style="padding: 50px; background-color: limegreen">
+    <div id="firstPage" style="padding: 50px; background-color: pink">
       <div>
         <label for="stayDate">Date: </label>
         <input
