--- a/trial.html
+++ b/trial.html
@@ -4,17 +4,17 @@
    
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/trial.css">
+        <link rel="stylesheet" href="/trial.css">
     </head>
 <body>  
     <a href="https://orewabeach.co.nz" target="_blank">
     <div class="parent">
-        <img class="child1" src="../CSS/Images/m2.jpg" style="z-index: -1;
+        <img class="child1" src="/Images/m2.jpg" style="z-index: -1;
         position: absolute;"> <!-- z-index to send element to background-->
         <span id="spin"></span>
       </div>
-            <!-- <div id="image" img src="../CSS/Images/m2.jpg" alt="i1" width="100vw" height="420"> -->
-                <div id="ball"><img src="../CSS/Images/ball1.png" alt="ball" width="75" height="75"/> </div>
+            <!-- <div id="image" img src="/Images/m2.jpg" alt="i1" width="100vw" height="420"> -->
+                <div id="ball"><img src="/Images/ball1.png" alt="ball" width="75" height="75"/> </div>
                 <!-- <div id="spin"></div> -->
             </div>
             <div id="surfboard"><img src="Images/surfboard1.png" alt="board" width="120" height="120"/> 
